Make icon names readable

--- a/compensation.html
+++ b/compensation.html
@@ -44,7 +44,7 @@ xhttp.onload = function() {
 
 
 function build_table(lines) {
-    var icons = ['&#xe7ee;', '&#xe55f;', '&#xe878;',
+    var icons = ['business', 'place', 'event',
                  'attach_money', 'trending_up', 'add',
                  'shield', 'school', 'shopping_cart'];
 
